<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-medium"
        android:textSize="28sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/in_which_city_area_are_you_living"
        android:layout_margin="24dp"/>
    <AutoCompleteTextView
        android:id="@+id/etSearchLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="sans-serif"
        android:hint="@string/search_city_name_here"
        app:layout_constraintTop_toBottomOf="@+id/tvCityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:singleLine="true"
        android:drawableEnd="@drawable/ic_send_black_24dp"
        android:backgroundTint="@color/colorPrimary"
        android:imeOptions="actionSearch"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_my_location"
        android:drawableStart="@drawable/ic_my_location_black_24dp"
        android:drawablePadding="5dp"
        android:gravity="start"
        android:id="@+id/tvSearchMyLocation"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/chuck_status_500"
        app:layout_constraintTop_toBottomOf="@+id/etSearchLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/tvSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchMyLocation"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_from_below"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/rvLocation"/>

</androidx.constraintlayout.widget.ConstraintLayout>